<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bac">

    <TextView
        android:id="@+id/apply_index"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_index"
        android:textSize="35sp" />

    <RelativeLayout
        android:id="@+id/apply_select1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="60dp" >

        <Button
            android:id="@+id/apply_for_student"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/student"
            android:textColor="#000000" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/apply_select2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/apply_select1"
        android:gravity="center">

        <Button
            android:id="@+id/apply_for_identity"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/identity"
            android:textColor="#000000" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/apply_select3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/apply_select2"
        android:gravity="center">

        <Button
            android:id="@+id/apply_for_driving"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/driving"
            android:textColor="#000000" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/apply_select4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/apply_select3"
        android:gravity="center">

        <Button
            android:id="@+id/apply_for_teacher"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/teacher"
            android:textColor="#000000" />

    </RelativeLayout>

    <Button
        android:id="@+id/apply_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/cancel"
        android:textColor="#000000" />

</LinearLayout>