<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bac">

    <RelativeLayout
        android:id="@+id/main_select1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="200dp" >


        <Button
            android:id="@+id/go_apply"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/apply"
            android:textColor="#000000" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_select"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_select1"
        android:gravity="center"
         >

        <Button
            android:id="@+id/go_query"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/query"
            android:textColor="#000000" />

    </RelativeLayout>

    <Button
        android:id="@+id/main_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/quit"
        android:textColor="#000000" />

</LinearLayout>