<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bac">

    <TextView
        android:id="@+id/apply_driving_licence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_driving_licence"
        android:textSize="35sp" />

    <RelativeLayout
        android:id="@+id/drivinglicence"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="60dp" >

        <RelativeLayout
            android:id="@+id/driving_nameRel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/driving_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/name"
                android:textColor="#000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/driving_nameEdittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dip"
                android:layout_toRightOf="@id/driving_name"
                android:background="@null"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/drivingidRel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/driving_nameRel"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/driving_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/driving_id"
                android:textColor="#000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/driving_idEdittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dip"
                android:layout_toRightOf="@id/driving_id"
                android:background="@null"
                android:textSize="15sp" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/driving_cancel"
            android:layout_width="65.83dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/driving_back"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="20dip" />

        <Button
            android:id="@+id/driving_submit"
            android:layout_width="65.83dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/submit"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>