<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bac">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/wel"
        android:textColor="#000"
        android:textSize="25sp" />

    <RelativeLayout
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="200dp" >

        <RelativeLayout
            android:id="@+id/login_usernameRel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/username"
                android:textColor="#000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/login_nameEdittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dip"
                android:layout_toRightOf="@id/user_name"
                android:background="@null"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_passwordRel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_usernameRel"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/user_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/password"
                android:textColor="#000"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/password_idEdittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:password="true"
                android:layout_marginLeft="20dip"
                android:layout_toRightOf="@id/user_password"
                android:background="@null"
                android:textSize="15sp" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login_submit"
            android:layout_width="65.83dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/login"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="20dip" />

        <Button
            android:id="@+id/register_submit"
            android:layout_width="65.83dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/register"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>