<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bac">

    <TextView
        android:id="@+id/queryresult_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/queryresult_hit"
        android:textColor="#000"
        android:textSize="17sp" />

    <RelativeLayout
        android:id="@+id/result"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/result_word"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:clickable="true"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/result_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/result_name"
                android:textColor="#000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/result_name_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_toRightOf="@id/result_name"
                android:padding="8dp"
                android:textColor="#000"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/result_num"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/result_word"
            android:clickable="true"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/result_num1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/result_num1"
                android:textColor="#000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/result_num1_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_toRightOf="@id/result_num1"
                android:padding="8dp"
                android:textColor="#000"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/result_ca"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/result_num"
            android:clickable="true"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/result_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/result_cat"
                android:textColor="#000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/result_cat_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_toRightOf="@id/result_cat"
                android:padding="8dp"
                android:textColor="#000"
                android:textSize="17sp" />
        </RelativeLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/result_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/queryresult_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_img"
        android:layout_marginRight="10dp"
        android:text="@string/ret"
        android:textColor="#000000" />

</LinearLayout>